# pastpaper_scraper

./: .env  pastpaper_craper.py  practice.py  pyproject.toml  readme.md
